--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<div class="container">
 				<div class="row pb-2">
 					<div class="col-12">
-						<h1 class="display-4 fw-bold white" data-aos="fade-down-right">I'M A <span class="text-brand">WEB DEVELOPRER AND
+						<h1 class="display-4 fw-bold white" data-aos="fade-down-right">I'M A <span class="text-brand">WEB DEVELOPER AND
 							DESIGNER</span> FROM KERALA, INDIA</h1>	
 					</div>
 				</div>
