--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="styles.css">
 	<title>Anwin C T</title>
+	<link rel="icon" type="image/x-icon" href="https://media.licdn.com/dms/image/D4D03AQEqQ5y6yNC6SQ/profile-displayphoto-shrink_200_200/0/1719513736788?e=2147483647&v=beta&t=uXNpsxLeZP1Bfnkbp7aa18VSU4RXipQiFrBiAE4zXSw"><br>
 	<!-- Favicons -->
   
 
